test: 로직 변경에 따른 테스트 케이스 수정
로직 변경에 따른 테스트 케이스 수정

CHZZ-134